// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> Snapshots should match the snapshot 1`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__wrapper___LkDcM {
  align-items: center;
  background-color: rgba(66,66,66,.5);
  bottom: 0;
  display: flex;
  justify-content: center;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 98;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

.c3 {
  pointer-events: none;
  width: 24px;
}

.c3.with-children {
  margin-right: 8px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c0:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c0:focus,
.c0:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c0:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c1 .c2 {
  margin-right: 0;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

<div
  class="Modal-module__wrapper___LkDcM"
  role="dialog"
>
  <article
    class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
    tabindex="0"
  >
    <header
      class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
    >
      <div
        class="HeaderText-module__header-text___TE5FD"
      >
        <h2
          class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
        >
          Modal title
        </h2>
      </div>
    </header>
    <div
      class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
    >
      Modal Content
    </div>
    <footer
      class="Footer-module__footer-wrapper___fgaA4"
    >
      ModalFooter
    </footer>
    <button
      aria-label="close dialog"
      class="c0 c1 Modal-module__close-icon___a0f6b"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 c3 css-1696fkf-MuiSvgIcon-root"
        data-qtm-preloader="icon"
        data-testid="CloseIcon"
        focusable="false"
        style="font-size: 24px; max-width: 24px;"
        viewBox="0 0 24 24"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
        />
      </svg>
    </button>
  </article>
</div>
`;

exports[`<Modal /> Snapshots should match the snapshot 2`] = `
.shadow-1 {
  box-shadow: 0 2px 1px -1px var(--qtm-shadow-umbra-color),0 1px 1px 0 var(--qtm-shadow-penumbra-color),0 1px 3px 0 var(--qtm-shadow-ambient-color);
}

.Card-module__card-wrapper___HvjEg {
  background-color: var(--qtm-colors-neutral-0);
  border-radius: 8px;
  display: flex;
  flex-direction: column;
  position: relative;
}

.Content-module__content___itVo9 {
  font-size: calc(var(--qtm-base-font-size)*.875);
  margin: 0;
  padding: var(--qtm-spacing-small) var(--qtm-spacing-medium);
}

.Footer-module__footer-wrapper___fgaA4 {
  padding: 0 var(--qtm-spacing-medium) var(--qtm-spacing-medium);
}

.Header-module__header-wrapper___G5kEL {
  display: flex;
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.HeaderText-module__header-text___TE5FD {
  flex-basis: 0;
  flex-grow: 1;
}

.Title-module__title___3S2cv {
  font-size: calc(var(--qtm-base-font-size)*1.5);
  font-weight: 600;
  margin: 0;
}

.Modal-module__close-icon___a0f6b {
  position: absolute;
  right: var(--qtm-spacing-medium);
  top: var(--qtm-spacing-small);
}

.ModalContent-module__content___GJGqF {
  font-size: var(--qtm-base-font-size);
  max-height: 70vh;
  overflow-y: auto;
  padding: var(--qtm-spacing-medium);
}

.ModalHeader-module__header___lVyEE {
  padding: var(--qtm-spacing-medium) var(--qtm-spacing-medium) 0;
}

.ModalTitle-module__title___AHcTw {
  font-weight: 700;
  line-height: 1.25;
}

@media (min-width:0px) {
  .Modal-module__modal-card___h7YdA {
    width: 90%;
  }
}

@media (min-width:600px) {
  .Modal-module__modal-card___h7YdA {
    width: 400px;
  }
}

@media (min-width:1024px) {
  .Modal-module__modal-card___h7YdA {
    width: 600px;
  }
}

@media (min-width:1440px) {
  .Modal-module__modal-card___h7YdA {
    width: 800px;
  }
}

.c3 {
  pointer-events: none;
  width: 24px;
}

.c3.with-children {
  margin-right: 8px;
}

.c0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-weight: bold;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border-radius: 4px;
  cursor: pointer;
  font-size: undefinedpx;
  line-height: NaNpx;
  min-height: 40px;
  padding: 4px 16px;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  background-color: #424242;
  color: #ffffff;
  border: 2px solid #424242;
  box-shadow: 0px 3px 1px -2px rgba(153,153,153,0.2),0px 2px 2px 0px rgba(153,153,153,0.14),0px 1px 5px 0px rgba(153,153,153,0.12);
}

.c0:hover {
  box-shadow: 0px 2px 4px -1px rgba(25,25,25,0.2),0px 4px 5px 0px rgba(25,25,25,0.14),0px 1px 10px 0px rgba(25,25,25,0.12);
  background-color: #191919;
  border-color: #191919;
}

.c0:focus,
.c0:focus-within {
  box-shadow: 0px 2px 4px -1px rgba(66,66,66,0.2),0px 4px 5px 0px rgba(66,66,66,0.14),0px 1px 10px 0px rgba(66,66,66,0.12);
}

.c0:active {
  box-shadow: 0px 5px 5px -3px rgba(25,25,25,0.2),0px 8px 10px 1px rgba(25,25,25,0.14),0px 3px 14px 2px rgba(25,25,25,0.12);
  background-color: #191919;
}

.c1 {
  border-radius: 50%;
  border: none;
  color: rgba(153,153,153,0.5);
  width: 40px;
  background-color: transparent;
  box-shadow: none;
  outline: none;
}

.c1 .c2 {
  margin-right: 0;
}

.c1:hover,
.c1:focus {
  box-shadow: none;
  background-color: rgba(224,224,224,0.4);
  color: #424242;
}

.c1:active {
  box-shadow: none;
  background-color: rgba(224,224,224,0.5);
  color: #424242;
}

<article
  class="Card-module__card-wrapper___HvjEg shadow-1 Modal-module__modal-card___h7YdA"
  tabindex="0"
>
  <header
    class="Header-module__header-wrapper___G5kEL ModalHeader-module__header___lVyEE"
  >
    <div
      class="HeaderText-module__header-text___TE5FD"
    >
      <h2
        class="Title-module__title___3S2cv ModalTitle-module__title___AHcTw"
      >
        Modal title
      </h2>
    </div>
  </header>
  <div
    class="Content-module__content___itVo9 ModalContent-module__content___GJGqF"
  >
    Modal Content
  </div>
  <footer
    class="Footer-module__footer-wrapper___fgaA4"
  >
    ModalFooter
  </footer>
  <button
    aria-label="close dialog"
    class="c0 c1 Modal-module__close-icon___a0f6b"
    type="button"
  >
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium c2 c3 css-1696fkf-MuiSvgIcon-root"
      data-qtm-preloader="icon"
      data-testid="CloseIcon"
      focusable="false"
      style="font-size: 24px; max-width: 24px;"
      viewBox="0 0 24 24"
    >
      <path
        d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
</article>
`;
